--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1311,7 +1311,7 @@
 "confirmation_popup_message_hide_single_album" = "Выбранные альбом(ы) и его содержимое будут скрыты и доступны только из альбома «Скрытый». Содержимое не будет отображаться в списках lifebox или его напоминаниях. Вы можете восстановить их, когда пожелаете. Хотите продолжить?";
 "smash_screen_title" = "Веселись";
 "smash_popup_message" = "Отредактированная фотография будет автоматически сохранена как в телефонной галерее, так и в lifebox.";
-"Smash" = "Веселись";
+"Smash" = "Gif";
 "photos_hide_success_message" = "Выбранная фотография(ии) скрыта.";
 "Unhide" = "Восстановление";
 "smart_album_hidden" = "Скрытый";
@@ -1757,3 +1757,11 @@
 "widget_description" = "Вы можете хранить свои воспоминания и телефон в безопасности, получая уведомления о памяти устройства и объеме памяти lifebox.";
 "widget_rule_6_small_detail_plural" = "Прошло больше месяца с момента создания последней резервной копии контактов.";
 "widget_rule_6_medium_detail_plural" = "С момента создания последней резервной копии контактов прошло больше месяца. Прямо сейчас, в lifebox, обезопасте свои контакты.";
+"smash_successed_alert_share" = "Поделиться";
+"fun_gif" = "GIF";
+"fun_sticker" = "Наклейка";
+"fun_close_alert_title" = "Вы хотите отказаться от изменений?";
+"fun_close_alert_message" = "Редактирование фотографии будет отменено.";
+"fun_close_alert_left_button" = "Продолжить редактирование";
+"fun_close_alert_right_button" = "Отмена";
+"Upload Music" = "Добавить файлы";
