--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -1299,7 +1299,7 @@
 "confirmation_popup_message_hide_single_album" = "Вибраний альбом та його вміст будуть приховані та доступні тільки в альбомі «Приховані». Відповідне вміст не буде зображатися в списках lifebox або нагадувань. Ви можете відновити його, коли забажаєте. Ви бажаєте продовжити?";
 "smash_screen_title" = "Веселись";
 "smash_popup_message" = "Відредагована фотографія буде автоматично збережена як в телефонній галереї, так і в Lifebox.";
-"Smash" = "Веселись";
+"Smash" = "Gif";
 "photos_hide_success_message" = "Вибрані фотографії приховані.";
 "Unhide" = "Відновити";
 "smart_album_hidden" = "Приховані";
@@ -1745,3 +1745,11 @@
 "widget_description" = "Ви можете захистити свої спогади та телефон, отримуючи сповіщення про пам’ять пристрою та простір для зберігання в lifebox.";
 "widget_rule_6_small_detail_plural" = "Ви не створили резервну копію своїх контактів принаймні 1 місяць.";
 "widget_rule_6_medium_detail_plural" = "Востаннє ви створювали резервні копії своїх контактів 1 місяць тому. Приходьте до lifebox прямо зараз, захистіть свого гіда.";
+"smash_successed_alert_share" = "Поділитися";
+"fun_gif" = "GIF";
+"fun_sticker" = "Наклейка";
+"fun_close_alert_title" = "Ви хочете відмінити зміни?";
+"fun_close_alert_message" = "Редагування фотографії буде відмінено.";
+"fun_close_alert_left_button" = "Продовжити редагування";
+"fun_close_alert_right_button" = "Відмінити";
+"Upload Music" = "Завантаження файлів";
