--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -202,8 +202,6 @@
 "Items Selected" = "Items Selected";
 "Item Selected" = "Item Selected";
 "Upload" = "Upload";
-"Upload Files" = "Upload Files";
-"Upload Music" = "Upload Music";
 "You can change the sequence " = "You can change the sequence of photos ";
 "Save" = "Save";
 "Add Music" = "Add Music";
@@ -1327,7 +1325,7 @@
 "confirmation_popup_message_hide_single_album" = "Selected album will only be available in \"Hidden\" Album. You can restore them any time. Are you sure to continue?";
 "smash_screen_title" = "Fun Effect";
 "smash_popup_message" = "This edited photo will be saved to device gallery and uploaded on lifebox as a new item.";
-"Smash" = "Fun";
+"Smash" = "Gif";
 "photos_hide_success_message" = "Photo(s) hidden successfully.";
 "Unhide" = "Unhide";
 "smart_album_hidden" = "Hidden";
@@ -1367,7 +1365,7 @@
 "smash_successed_alert_title" = "Saved successfully to your device gallery and uploaded on lifebox!";
 "smash_successed_alert_second_title" = "Have Fun? What's Next?";
 "smash_successed_alert_description" = "Now you can share the edited photo with your friends.\nAlso you can get rid off the undesirable memories by hiding or deleting with one click in the People Album.";
-"smash_successed_alert_share" = "Share";
+
 /*smash_successed_alert_title  key'inden farkı ne?*/
 "smash_successed_simple_alert_title" = "Saved successfully to your device gallery and uploaded on lifebox!";
 "smash_successed_simple_alert_description" = "Now you can share the edited photo with your friends.\nAlso you can get rid off the undesirable memories by hiding or deleting with one click in the People Album.";
@@ -1793,10 +1791,11 @@
 "widget_description" = "Get notified about your device storage and lifebox quota and keep track of your memories.";
 "widget_rule_6_small_detail_plural" = "It's over %d months since last contact backup.";
 "widget_rule_6_medium_detail_plural" = "It's over %d months since your last contact backup.";
-
+"smash_successed_alert_share" = "Share";
 "fun_gif" = "Gif";
 "fun_sticker" = "Sticker";
 "fun_close_alert_title" = "Discard Changes?";
 "fun_close_alert_message" = "Your photo edits will be discarded.";
 "fun_close_alert_left_button" = "Keep editing";
 "fun_close_alert_right_button" = "Discard";
+"Upload Music" = "Upload Files";
