--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1810,10 +1810,11 @@
 "private_share_start_page_add_messge_field" = "Your message (optional)";
 "private_share_start_page_share_duration_section_name" = "Share duration";
 "private_share_start_page_share_duration_1" = "No duration";
-"private_share_start_page_share_duration_2" = "One day";
-"private_share_start_page_share_duration_3" = "One week";
-"private_share_start_page_share_duration_4" = "One month";
-"private_share_start_page_share_duration_5" = "One year";
+"private_share_start_page_share_duration_2" = "One hour";
+"private_share_start_page_share_duration_3" = "One day";
+"private_share_start_page_share_duration_4" = "One week";
+"private_share_start_page_share_duration_5" = "One month";
+"private_share_start_page_share_duration_6" = "One year";
 "private_share_start_page_share_button" = "Share";
 "private_share_start_page_cancel_button" = "Cancel";
 "private_share_start_page_role_1" = "Editor";
