--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1819,3 +1819,6 @@
 "private_share_start_page_cancel_button" = "Cancel";
 "private_share_start_page_role_1" = "Editor";
 "private_share_start_page_role_2" = "Viewer";
+"private_share_details_page_name" = "Shared Items";
+"private_share_shared_by_me_tab" = "Shared by me";
+"private_share_shared_with_me_tab" = "Shared with me";
