--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1819,3 +1819,7 @@
 "private_share_start_page_cancel_button" = "Cancel";
 "private_share_start_page_role_1" = "Editor";
 "private_share_start_page_role_2" = "Viewer";
+
+"private_share_role_selection_page_name" = "Access";
+"private_share_role_selection_role_1" = "Can edit";
+"private_share_role_selection_role_2" = "Can view";
