--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1826,3 +1826,9 @@
 "private_share_role_selection_role_1" = "Can edit";
 "private_share_role_selection_role_2" = "Can view";
 "private_share_msisdn_format" = "msisdn format is invalid";
+
+"private_share_info_section_name" = "Sharing Info";
+"private_share_info_number_of_people" = "Shared with %d people";
+"private_share_info_role_1" = "Owner";
+"private_share_info_role_2" = "Editor";
+"private_share_info_role_3" = "Viewer";
