--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1826,3 +1826,4 @@
 "private_share_role_selection_role_1" = "Can edit";
 "private_share_role_selection_role_2" = "Can view";
 "private_share_msisdn_format" = "msisdn format is invalid";
+"private_share_email_format" = "email format is invalid";
