--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -117,6 +117,8 @@
 "Create a Story" = "Krijoni një histori ";
 "Share Via Link" = "";
 "Original Size" = "";
+"Share Via Link" = "Shpërndajeni nëpërmjet linkut";
+"Original Size" = "Madhësia Origjinale";
 "Small Size" = "Përmasa e Vogël ";
 "Download" = "Shkarkoni";
 "Sync" = "Sinkronizoni ";
