--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1844,3 +1844,12 @@
 "private_share_who_has_access_end_share" = "End Sharing";
 "private_share_end_sharing_confirm" = "Are you sure you want to end sharing?";
 "private_share_end_sharing_success" = "Sharing ended";
+
+"private_share_access_role_1" = "Editor";
+"private_share_access_role_2" = "Viewer";
+"private_share_access_role_3" = "Remove";
+"private_share_access_page_name" = "Access";
+"private_share_access_from_folder" = "From %@";
+"private_share_expire_date" = "Expires on: %@";
+"private_share_access_role_change_success" = "Role is updated";
+"private_share_access_remove_confirmation" = "Are you sure you want to remove user from the share?";
