--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1853,3 +1853,6 @@
 "private_share_who_has_access_end_share" = "End Sharing";
 "private_share_end_sharing_confirm" = "Are you sure you want to end sharing?";
 "private_share_end_sharing_success" = "Sharing ended";
+"private_share_all_files_section_1" = "Shared with me";
+"private_share_all_files_section_1_see_all" = "See all";
+"private_share_all_files_section_2" = "My Files";
