--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -117,8 +117,8 @@
 "Add to Favorites" = "إضافة إلى المفضلة";
 "Copy" = "نسخ";
 "Create a Story" = "إنشاء عرض شرائح الفيديو";
-"Share Via Link" = "";
-"Original Size" = "";
+"Share Via Link" = "قم بنسخ الرابط";
+"Original Size" = "ارسل نسخة منه";
 "Small Size" = "حجم صغير";
 "Download" = "تنزيل";
 "Sync" = "مزامنة";
@@ -1017,7 +1017,7 @@
 
 /*Settings page*/
 "Permissions" = "تصاريح";
-"NSContactsUsageDescription" = "يحتاج lifebox إلى الوصول وتحميل جهات الاتصال الخاصة بك إلى خوادم lifebox للنسخ الاحتياطي وإدارتها.";
+"NSContactsUsageDescription" = "أعطي إذن إلى لايف بوكس lifeboxمن أجل القدرة على النسخ الإحتياطي و إدارة الدليل بإصدارات لايف بوكس lifebox ومن أجل التمكن من مشاهدة توصيات الدليل أثناء مشاركة الملف.";
 "import_from_spotify" = "الانتقال من سبوتيفي";
 "import_from_spotify_btn" = "الانتقال من سبوتيفي";
 "import_from_spotify_title" = "اتصل بسبوتيفي";
@@ -1763,40 +1763,70 @@
 "fun_close_alert_left_button" = "واصل التعديل";
 "fun_close_alert_right_button" = "إلغاء";
 "Upload Music" = "تحميل ملفات";
-"private_share_option" = "";
-"private_share_start_page_name" = "";
-"private_share_start_page_people_selection_section_name" = "";
-"private_share_start_page_enter_user_field" = "";
-"private_share_start_page_suggestions_section" = "";
-"private_share_start_page_shared_with_section" = "";
-"private_share_start_page_add_message_section_name" = "";
-"private_share_start_page_add_messge_field" = "";
-"private_share_start_page_share_duration_section_name" = "";
-"private_share_start_page_share_duration_1" = "";
-"private_share_start_page_share_duration_2" = "";
-"private_share_start_page_share_duration_3" = "";
-"private_share_start_page_share_duration_4" = "";
-"private_share_start_page_share_duration_5" = "";
-"private_share_start_page_share_duration_6" = "";
-"private_share_start_page_share_button" = "";
-"private_share_start_page_cancel_button" = "";
-"private_share_start_page_role_1" = "";
-"private_share_start_page_role_2" = "";
-"private_share_role_selection_page_name" = "";
-"private_share_role_selection_role_1" = "";
-"private_share_role_selection_role_2" = "";
-"private_share_msisdn_format" = "";
-"private_share_start_page_share_success" = "";
-"private_share_cancel_confirm" = "";
-"private_share_details_page_name" = "";
-"private_share_shared_by_me_tab" = "";
-"private_share_shared_with_me_tab" = "";
-"private_share_info_section_name" = "";
-"private_share_info_number_of_people" = "";
-"private_share_info_role_1" = "";
-"private_share_info_role_2" = "";
-"private_share_info_role_3" = "";
-"private_share_email_format" = "";
-"private_share_shared_with_me_empty_page" = "";
-"private_share_shared_by_me_empty_page" = "";
-"private_share_inner_folder_empty_page" = "";
+"private_share_option" = "شارك مع جهة الاتصال";
+"private_share_start_page_name" = "شارك";
+"private_share_start_page_people_selection_section_name" = "أضف جهات الاتصال";
+"private_share_start_page_enter_user_field" = "أدخل رقم GSMأوعنوان البريد الإلكتروني(مع كود الدولة)";
+"private_share_start_page_suggestions_section" = "التوصيات";
+"private_share_start_page_shared_with_section" = "جهات الاتصال المشاركة";
+"private_share_start_page_add_message_section_name" = "أضف رسالة";
+"private_share_start_page_add_messge_field" = "(اختياري)";
+"private_share_start_page_share_duration_section_name" = "فترة الصلاحية";
+"private_share_start_page_share_duration_1" = "بدون مدة محددة";
+"private_share_start_page_share_duration_2" = "ساعة";
+"private_share_start_page_share_duration_3" = "يوم";
+"private_share_start_page_share_duration_4" = "اسبوع";
+"private_share_start_page_share_duration_5" = "شهر";
+"private_share_start_page_share_duration_6" = "عام";
+"private_share_start_page_share_button" = "شارك";
+"private_share_start_page_cancel_button" = "قم بالإلغاء";
+"private_share_start_page_role_1" = "المنظم";
+"private_share_start_page_role_2" = "المشاهد";
+"private_share_role_selection_page_name" = "الوصول";
+"private_share_role_selection_role_1" = "يمكن تنظيمه";
+"private_share_role_selection_role_2" = "يمكن مشاهدته";
+"private_share_msisdn_format" = "من فضلك أدخل رقم GSMصالح.";
+"private_share_start_page_share_success" = "المشاركة ناجحة";
+"private_share_cancel_confirm" = "هل أنت متأكد من أنك ترغب في الخروج؟";
+"private_share_details_page_name" = "العناصر المشاركة";
+"private_share_shared_by_me_tab" = "ما قمت بمشاركته";
+"private_share_shared_with_me_tab" = "ما تم مشاركته";
+"private_share_info_section_name" = "معلومات المشاركة";
+"private_share_info_number_of_people" = "تم مشاركتها مع %d شخص";
+"private_share_info_role_1" = "صاحب المشاركة";
+"private_share_info_role_2" = "المنظم";
+"private_share_info_role_3" = "المشاهد";
+"private_share_email_format" = "من فضلك أدخل عنوان بريد إلكتروني صالح.";
+"private_share_shared_with_me_empty_page" = " لا يوجد ملف تم مشاركته معك حتى الان! ";
+"private_share_shared_by_me_empty_page" = "لا يوجد ملف عائد لك قد قمت بمشاركته حتى الان.";
+"private_share_end_sharing_success" = "تم إيقاف المشاركة";
+"private_share_end_sharing_confirm" = "هل أنت متأكد من أنك ترغب في إيقاف المشاركة؟";
+"private_share_end_sharing_action_title" = "قم بإيقاف المشاركة";
+"private_share_who_has_access_page_name" = "الذين لديهم الوصول";
+"private_share_who_has_access_role_1" = "المشارك";
+"private_share_who_has_access_role_2" = "المنظم";
+"private_share_who_has_access_role_3" = "المشاهد";
+"private_share_who_has_access_end_share" = "قم بإيقاف المشاركة";
+"private_share_inner_folder_empty_page" = "المجلد فارغ";
+"private_share_info_role_4" = "";
+"private_share_non_turkish_msisdn_warning" = "من فضلك قم بإدخال رقم GSMمع كود الدولة";
+"private_share_leave_sharing_success" = "قد خرجت من المشاركة";
+"private_leave_sharing_confirm" = "";
+"private_share_leave_sharing_action_title" = "اخرج من المشاركة";
+"private_share_who_has_access_role_4" = "";
+"private_share_all_files_section_1" = "المشاركات";
+"private_share_all_files_section_1_see_all" = "شاهد الجميع";
+"private_share_all_files_section_2" = "ملفاتي";
+"private_share_access_role_1" = "المنظم";
+"private_share_access_role_2" = "المشاهد";
+"private_share_access_role_3" = "أزل";
+"private_share_access_role_4" = "";
+"private_share_access_page_name" = "وصول";
+"private_share_access_from_folder" = "من المجلد%@";
+"private_share_expire_date" = "تاريخ الإنتهاء: %@";
+"private_share_access_role_change_success" = "تم تغيير الدور";
+"private_share_access_remove_confirmation" = "هل أنت متأكد من أنك ترغب في إخراج المستخدم؟";
+"private_share_info_access_role_remove" = "تم إخراجه من المشاركة";
+"private_share_plus_button_no_action" = "لا يمكن تحميل ملف جديد في هذه الصفحة";
+"private_share_confirm_trash_items" = "هل أنت متأكد من أنك ترغب في المسح؟";
+"private_share_preview_not_ready" = "";
