--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -121,8 +121,8 @@
 "Add to Favorites" = "Agregar a favoritos";
 "Copy" = "Copiar";
 "Create a Story" = "Crear una historia";
-"Share Via Link" = "Compartir a través de un enlace";
-"Original Size" = "Tamaño Original";
+"Share Via Link" = "Copia la conexión";
+"Original Size" = "Envia la copia";
 "Small Size" = "Tamaño Pequeño";
 "Download" = "Descargar";
 "Sync" = "Sincronizar";
@@ -1047,7 +1047,7 @@
 
 /*Settings page*/
 "Permissions" = "Permisos";
-"NSContactsUsageDescription" = "lifebox necesita acceder y cargar sus contactos a los servidores de Lifebox para hacer una copia de seguridad y administrarlos.";
+"NSContactsUsageDescription" = "Permita que lifebox vea las sugerencias de los contactos durante la compartición de archivos y haga una copia de seguridad en los servidores de lifebox y gestione los contactos.";
 "import_from_spotify" = "Transferir de Spotify";
 "import_from_spotify_btn" = "Transferir de Spotify";
 "import_from_spotify_title" = "Conectar a Spotify";
@@ -1793,40 +1793,70 @@
 "fun_close_alert_left_button" = "Continua editando";
 "fun_close_alert_right_button" = "";
 "Upload Music" = "Cargar archivos";
-"private_share_option" = "";
-"private_share_start_page_name" = "";
-"private_share_start_page_people_selection_section_name" = "";
-"private_share_start_page_enter_user_field" = "";
-"private_share_start_page_suggestions_section" = "";
-"private_share_start_page_shared_with_section" = "";
-"private_share_start_page_add_message_section_name" = "";
-"private_share_start_page_add_messge_field" = "";
-"private_share_start_page_share_duration_section_name" = "";
-"private_share_start_page_share_duration_1" = "";
-"private_share_start_page_share_duration_2" = "";
-"private_share_start_page_share_duration_3" = "";
-"private_share_start_page_share_duration_4" = "";
-"private_share_start_page_share_duration_5" = "";
-"private_share_start_page_share_duration_6" = "";
-"private_share_start_page_share_button" = "";
-"private_share_start_page_cancel_button" = "";
-"private_share_start_page_role_1" = "";
-"private_share_start_page_role_2" = "";
-"private_share_role_selection_page_name" = "";
-"private_share_role_selection_role_1" = "";
-"private_share_role_selection_role_2" = "";
-"private_share_msisdn_format" = "";
-"private_share_start_page_share_success" = "";
-"private_share_cancel_confirm" = "";
-"private_share_details_page_name" = "";
-"private_share_shared_by_me_tab" = "";
-"private_share_shared_with_me_tab" = "";
-"private_share_info_section_name" = "";
-"private_share_info_number_of_people" = "";
-"private_share_info_role_1" = "";
-"private_share_info_role_2" = "";
-"private_share_info_role_3" = "";
-"private_share_email_format" = "";
-"private_share_shared_with_me_empty_page" = "";
-"private_share_shared_by_me_empty_page" = "";
-"private_share_inner_folder_empty_page" = "";
+"private_share_option" = "Comparte con la persona";
+"private_share_start_page_name" = "Comparte";
+"private_share_start_page_people_selection_section_name" = "Añade a los  contactos";
+"private_share_start_page_enter_user_field" = "Introduce el número de correo electrónico o GSM (con código de país)";
+"private_share_start_page_suggestions_section" = "Recomendaciones";
+"private_share_start_page_shared_with_section" = "Contactos compartidos";
+"private_share_start_page_add_message_section_name" = "Añade un mensaje";
+"private_share_start_page_add_messge_field" = "(Opcional)";
+"private_share_start_page_share_duration_section_name" = "Período de validez";
+"private_share_start_page_share_duration_1" = "Indefinido";
+"private_share_start_page_share_duration_2" = "1 hora";
+"private_share_start_page_share_duration_3" = "1 dia";
+"private_share_start_page_share_duration_4" = "1 semana";
+"private_share_start_page_share_duration_5" = "1 mes";
+"private_share_start_page_share_duration_6" = "1 año";
+"private_share_start_page_share_button" = "Comparte";
+"private_share_start_page_cancel_button" = "Cancela";
+"private_share_start_page_role_1" = "Editor";
+"private_share_start_page_role_2" = "Personas que han visto";
+"private_share_role_selection_page_name" = "Acceso";
+"private_share_role_selection_role_1" = "Puede editar";
+"private_share_role_selection_role_2" = "Puede visualizar";
+"private_share_msisdn_format" = "Por favor, introduce un número de GSM válido!";
+"private_share_start_page_share_success" = "La compartición lograda.";
+"private_share_cancel_confirm" = "¿Estás seguro de que quieres salir?";
+"private_share_details_page_name" = "Artículos compartidos";
+"private_share_shared_by_me_tab" = "lo que comparto";
+"private_share_shared_with_me_tab" = "Compartidos";
+"private_share_info_section_name" = "Datos de compartición";
+"private_share_info_number_of_people" = "Se compartió con la persona %d .";
+"private_share_info_role_1" = "Dueño de compartición";
+"private_share_info_role_2" = "Editor";
+"private_share_info_role_3" = "Personas que han visto";
+"private_share_email_format" = "Por favor, introduce un correo electrónico válido!";
+"private_share_shared_with_me_empty_page" = "Todavía no hay archivos compartidos contigo.";
+"private_share_shared_by_me_empty_page" = "Todavía no tienes un archivo que has compartido.";
+"private_share_end_sharing_success" = "Se paro la compartición.";
+"private_share_end_sharing_confirm" = "¿Estás seguro de que quieres parar compartir?";
+"private_share_end_sharing_action_title" = "Para la compartición";
+"private_share_who_has_access_page_name" = "Los que tienen el acceso";
+"private_share_who_has_access_role_1" = "El que comparte";
+"private_share_who_has_access_role_2" = "Editor";
+"private_share_who_has_access_role_3" = "Personas que han visto";
+"private_share_who_has_access_end_share" = "Para la compartición";
+"private_share_inner_folder_empty_page" = "Carpeta vacía";
+"private_share_info_role_4" = "";
+"private_share_non_turkish_msisdn_warning" = "Introduzca el número de GSM con (+) el código de país";
+"private_share_leave_sharing_success" = "Saliste de la compartición";
+"private_leave_sharing_confirm" = "";
+"private_share_leave_sharing_action_title" = "Deja de la compartición";
+"private_share_who_has_access_role_4" = "";
+"private_share_all_files_section_1" = "Compartidos";
+"private_share_all_files_section_1_see_all" = "Ver todo";
+"private_share_all_files_section_2" = "Mis archivos";
+"private_share_access_role_1" = "Editor";
+"private_share_access_role_2" = "Personas que han visto";
+"private_share_access_role_3" = "Quita";
+"private_share_access_role_4" = "";
+"private_share_access_page_name" = "Acceso";
+"private_share_access_from_folder" = "La carpeta de %@";
+"private_share_expire_date" = "La fecha de caducidad: %@";
+"private_share_access_role_change_success" = "Se ha cambiado el rol";
+"private_share_access_remove_confirmation" = "¿Está seguro de que desea eliminar el usuario?";
+"private_share_info_access_role_remove" = "Se ha eliminado de la compartición";
+"private_share_plus_button_no_action" = "No se puede cargar el nuevo archivo en esta página";
+"private_share_confirm_trash_items" = "Está seguro de que desea eliminar?";
+"private_share_preview_not_ready" = "";
