--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -121,7 +121,7 @@
 "Add to Favorites" = "Add to favorites";
 "Copy" = "Copy";
 "Create a Story" = "Create a Story";
-"Share Via Link" = "Copy Link";
+"Share Via Link" = "Copy Public Link";
 "Original Size" = "Send a copy";
 "Small Size" = "Small Size";
 "Download" = "Download";
@@ -195,7 +195,7 @@
 
 /*I don't understand*/
 "Sorry, but photos not selected" = "Photos are not selected";
-"Upload from lifebox" = "Upload from lifebox";
+"Upload from lifebox" = "Add from lifebox";
 "Upload failed" = "Upload failed";
 "Upload was successful" = "Uploaded successfully";
 "Nothing to upload" = "Nothing to upload";
@@ -1033,7 +1033,7 @@
 
 /*Settings page*/
 "Permissions" = "Permissions";
-"NSContactsUsageDescription" = "lifebox needs to access and upload your contacts to lifebox servers to backup and manage them.";
+"NSContactsUsageDescription" = "lifebox needs permission to access your contacts for providing phonebook suggestions during file sharing, and for contact back up feature to upload your contacts to lifebox servers to backup and manage them.";
 "import_from_spotify" = "Import from Spotify";
 "import_from_spotify_btn" = "Import from Spotify";
 "import_from_spotify_title" = "Connect Spotify";
@@ -1799,21 +1799,21 @@
 "fun_close_alert_left_button" = "Keep editing";
 "fun_close_alert_right_button" = "Discard";
 "Upload Music" = "Upload Files";
-"private_share_option" = "Private Share";
+"private_share_option" = "Share with People";
 "private_share_start_page_name" = "Share";
-"private_share_start_page_people_selection_section_name" = "Select people to share";
-"private_share_start_page_enter_user_field" = "Enter e-mail or GSM number";
+"private_share_start_page_people_selection_section_name" = "Add people";
+"private_share_start_page_enter_user_field" = "Enter E-Mail or GSM Number with Country Code";
 "private_share_start_page_suggestions_section" = "Suggestions";
 "private_share_start_page_shared_with_section" = "Shared with";
-"private_share_start_page_add_message_section_name" = "Add a message";
-"private_share_start_page_add_messge_field" = "Your message (optional)";
-"private_share_start_page_share_duration_section_name" = "Share duration";
+"private_share_start_page_add_message_section_name" = "Add Message";
+"private_share_start_page_add_messge_field" = "(Optional)";
+"private_share_start_page_share_duration_section_name" = "Duration";
 "private_share_start_page_share_duration_1" = "No duration";
-"private_share_start_page_share_duration_2" = "One hour";
-"private_share_start_page_share_duration_3" = "One day";
-"private_share_start_page_share_duration_4" = "One week";
-"private_share_start_page_share_duration_5" = "One month";
-"private_share_start_page_share_duration_6" = "One year";
+"private_share_start_page_share_duration_2" = "1 hour";
+"private_share_start_page_share_duration_3" = "1 day";
+"private_share_start_page_share_duration_4" = "1 week";
+"private_share_start_page_share_duration_5" = "1 month";
+"private_share_start_page_share_duration_6" = "1 year";
 "private_share_start_page_share_button" = "Share";
 "private_share_start_page_cancel_button" = "Cancel";
 "private_share_start_page_role_1" = "Editor";
@@ -1821,9 +1821,9 @@
 "private_share_role_selection_page_name" = "Access";
 "private_share_role_selection_role_1" = "Can edit";
 "private_share_role_selection_role_2" = "Can view";
-"private_share_msisdn_format" = "msisdn format is invalid";
-"private_share_start_page_share_success" = "Share is successful";
-"private_share_cancel_confirm" = "Are you sure you want to quit?";
+"private_share_msisdn_format" = "Please enter valid GSM number";
+"private_share_start_page_share_success" = "Shared Successfully";
+"private_share_cancel_confirm" = "Are you sure to quit?";
 "private_share_details_page_name" = "Shared Items";
 "private_share_shared_by_me_tab" = "Shared by me";
 "private_share_shared_with_me_tab" = "Shared with me";
@@ -1832,33 +1832,27 @@
 "private_share_info_role_1" = "Owner";
 "private_share_info_role_2" = "Editor";
 "private_share_info_role_3" = "Viewer";
-"private_share_info_role_4" = "Varies";
-"private_share_email_format" = "email format is invalid";
-"private_share_non_turkish_msisdn_warning" = "You need to add a GSM number starting with + character and country code";
-"private_share_shared_with_me_empty_page" = "No files are shared with you up to now";
-"private_share_shared_by_me_empty_page" = "You haven't shared any files yet";
-"private_share_inner_folder_empty_page" = "Folder is Empty";
-
-"private_share_end_sharing_success" = "Sharing ended";
-"private_share_end_sharing_confirm" = "Are you sure you want to end sharing?";
-"private_share_end_sharing_action_title" = "End Sharing";
-
-"private_share_leave_sharing_success" = "Sharing is left";
-"private_leave_sharing_confirm" = "Are you sure you want to leave sharing?";
-"private_share_leave_sharing_action_title" = "Leave Sharing";
-
+"private_share_email_format" = "Please enter valid e-mail";
+"private_share_shared_with_me_empty_page" = "Don't have any shared files yet";
+"private_share_shared_by_me_empty_page" = "Haven't shared any files yet";
+"private_share_end_sharing_success" = "Sharing stopped";
+"private_share_end_sharing_confirm" = "Are you sure to stop sharing?";
+"private_share_end_sharing_action_title" = "Stop Sharing";
 "private_share_who_has_access_page_name" = "Who has access";
 "private_share_who_has_access_role_1" = "Owner";
 "private_share_who_has_access_role_2" = "Editor";
 "private_share_who_has_access_role_3" = "Viewer";
+"private_share_who_has_access_end_share" = "Stop Sharing";
+"private_share_inner_folder_empty_page" = "Folder is empty";
+"private_share_info_role_4" = "Varies";
+"private_share_non_turkish_msisdn_warning" = "Please Enter GSM Number with (+)Country Code";
+"private_share_leave_sharing_success" = "Left Successfully";
+"private_leave_sharing_confirm" = "Are you sure you want to leave sharing?";
+"private_share_leave_sharing_action_title" = "Leave Sharing";
 "private_share_who_has_access_role_4" = "Varies";
-"private_share_who_has_access_end_share" = "End Sharing";
-"private_share_end_sharing_confirm" = "Are you sure you want to end sharing?";
-"private_share_end_sharing_success" = "Sharing ended";
 "private_share_all_files_section_1" = "Shared with me";
 "private_share_all_files_section_1_see_all" = "See all";
 "private_share_all_files_section_2" = "My Files";
-
 "private_share_access_role_1" = "Editor";
 "private_share_access_role_2" = "Viewer";
 "private_share_access_role_3" = "Remove";
@@ -1866,10 +1860,9 @@
 "private_share_access_page_name" = "Access";
 "private_share_access_from_folder" = "From %@";
 "private_share_expire_date" = "Expires on: %@";
-"private_share_access_role_change_success" = "Role is updated";
-"private_share_access_remove_confirmation" = "Are you sure you want to remove user from the share?";
-"private_share_info_access_role_remove" = "User is removed from share";
-"private_share_plus_button_no_action" = "There is no action for plus button in this level";
+"private_share_access_role_change_success" = "Role Changed";
+"private_share_access_remove_confirmation" = "Are you sure to remove user?";
+"private_share_info_access_role_remove" = "Removed Successfully";
+"private_share_plus_button_no_action" = "New item(s) can not be uploaded in this page";
+"private_share_confirm_trash_items" = "Are you sure to delete item(s)?";
 "private_share_preview_not_ready" = "We can't preview this file now. Please try again later.";
-
-"private_share_confirm_trash_items" = "Deleting these files will remove them from cloud. You won't be able to access them once deleted";
