--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2060,7 +2060,7 @@ Please check I have understood the intended command here*/
 "private_share_option" = "Partagez avec une personne";
 "private_share_start_page_name" = "Partagez";
 "private_share_start_page_people_selection_section_name" = "Ajoutez les contacts";
-"private_share_start_page_enter_user_field" = "Entrez votre e-mail ou votre numéro GSM (avec le Code du Pays)";
+"private_share_start_page_enter_user_field" = "Entrez e-mail ou numéro de GSM (avec le code du pays)";
 "private_share_start_page_suggestions_section" = "Contacts recommandés";
 "private_share_start_page_shared_with_section" = "Contacts partagés";
 "private_share_start_page_add_message_section_name" = "Ajoutez un message";
