--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -1860,3 +1860,6 @@
 "private_share_plus_button_no_action" = "No se puede cargar el nuevo archivo en esta página";
 "private_share_confirm_trash_items" = "Está seguro de que desea eliminar?";
 "private_share_preview_not_ready" = "No se puede obtener una vista previa del archivo ahora. Por favor, inténtelo de nuevo más tarde.";
+"private_share_long_message" = "";
+"private_share_long_emailmsisdn" = "";
+"private_share_start_max_number_of_users" = "";
