--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -1861,3 +1861,6 @@
 "private_share_plus_button_no_action" = "Skedari i ri nuk mund të ngarkohet në këtë faqe";
 "private_share_confirm_trash_items" = "Je i sigurt që dëshiron të fshish?";
 "private_share_preview_not_ready" = "Skedari nuk mund të parapamet tani. Ju lutemi provoni përsëri më vonë.";
+"private_share_long_message" = "";
+"private_share_long_emailmsisdn" = "";
+"private_share_start_max_number_of_users" = "";
