--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -1820,3 +1820,6 @@
 "private_share_plus_button_no_action" = "Неможливо завантажити новий файл на цю сторінку";
 "private_share_confirm_trash_items" = "Ви впевнені, що хочете видалити?";
 "private_share_preview_not_ready" = "Файл не можна попередньо переглянути. Будь-ласка спробуйте пізніше.";
+"private_share_long_message" = "";
+"private_share_long_emailmsisdn" = "";
+"private_share_start_max_number_of_users" = "";
