--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1867,3 +1867,5 @@
 "private_share_confirm_trash_items" = "Are you sure to delete item(s)?";
 "private_share_preview_not_ready" = "File can not be previewed now. Please try again later.";
 "private_share_start_max_number_of_users" = "You can not add more than %d people to share.";
+"private_share_long_message" = "private_share_long_message";
+"private_share_long_emailmsisdn" = "private_share_long_emailmsisdn";
